Continued working on the Kitchen Staff Implementation.... Need to prevent each thread from both modifying a dish at the same time.
Signed-off-by: Eugene Agyeman <eugene.agyeman1@yahoo.co.uk>